@@ -10,6 +10,11 @@ This module is currently only a placeholder, see pf::SNMP::Cisco::Catalyst_2960.
 
 We do not know the minimum required firmware version.
 
+=head1 BUGS AND LIMITATIONS
+
+Because a lot of code is shared with the 2960 make sure to check the BUGS AND LIMITATIONS section of 
+L<pf::SNMP::Cisco::Catalyst_2960> also.
+
 =head1 CONFIGURATION AND ENVIRONMENT
 
 F<conf/switches.conf>
@@ -25,6 +30,8 @@ use Net::SNMP;
 use base ('pf::SNMP::Cisco::Catalyst_2960');
 
 =head1 AUTHOR
+
+Olivier Bilodeau <obilodeau@inverse.ca>
 
 Regis Balzard <rbalzard@inverse.ca>
 
